Fix star icon misalignment for numbered items, Fixes #116

--- a/layout-multiple-columns.css
+++ b/layout-multiple-columns.css
@@ -1,5 +1,5 @@
 /* Mastodon Bird UI by @rolle@mementomori.social
-   2.0.0rc34 */
+   2.0.0rc35 */
 
 /* CSS variables */
 :root {
@@ -4530,13 +4530,19 @@ div[tabindex="-1"] + div[tabindex="-1"] > .status__wrapper > .status-reply.statu
 
 .layout-multiple-columns .detailed-status__action-bar button.icon-button.star-icon.icon-button--with-counter.star-icon.activate::after,
 .layout-multiple-columns .status__action-bar button.icon-button.icon-button--with-counter.star-icon.activate.star-icon::after {
-  left: calc(50% - 14px) !important;
+  left: calc(50% - 8px) !important;
   top: calc(50% + -1px) !important;
 }
 
 .layout-multiple-columns .detailed-status__action-bar button.icon-button.icon-button--with-counter.activate.star-icon::before,
 .layout-multiple-columns .status__action-bar button.icon-button.icon-button--with-counter.activate.star-icon::before {
-  left: calc(50% - 14px) !important;
+  left: calc(50% - 8px) !important;
+}
+
+.layout-multiple-columns button.icon-button.icon-button--with-counter.activate.star-icon > .icon-star {
+  position: absolute !important;
+  top: unset !important;
+  left: -34px !important;
 }
 
 @media (hover: none) {
